syntax = "proto3";

option go_package = ".;pb";

package protocols.ipec;

message TaskOwner {
  string hostId = 1;
}

message TaskPerformer {
  string hostId = 1;
}

message Task {
  string taskId = 1;
  bytes function = 2;
  bytes input = 3;
  string description = 4;
  TaskOwner owner = 5;
  int64 createdAt = 15;
}

message TaskRequest {
  Task task = 1;
  TaskOwner owner = 2;
}

message TaskAcceptAck {
  string taskId = 1;
  bool chosen = 2;
}

message TaskResponse {
  enum Status {
    ACCEPT = 0;
    REJECT = 1;
    SCHEDULED = 2;
    DONE = 3;
    FAILED = 4;
  }
  Status status = 1;
  string taskId = 2;
  bytes output = 3;
  int64 finishedAt = 4;
  int64 schedule = 5;
  TaskPerformer performer = 6;
}